<resources>
    <string name="app_name">David_Toty_TP1</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="bravo">Nice !</string>
    <string name="end">The end</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="replay">Replay</string>
</resources>
