<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.m2sar.david_toty_tp1.MainActivity">



    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/b1"
        android:id="@+id/button1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="45dp"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@id/button1"
        android:layout_alignTop="@id/button1"
        android:text="@string/b2"
        android:id="@+id/button2"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@id/button2"
        android:layout_alignTop="@id/button1"
        android:text="@string/b3"
        android:id="@+id/button3"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/button1"
        android:layout_alignStart="@id/button1"
        android:text="@string/b4"
        android:id="@+id/button4"
        />


    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/button2"
        android:layout_toEndOf="@id/button4"
        android:text="@string/b5"
        android:id="@+id/button5"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/button3"
        android:layout_toEndOf="@id/button5"
        android:text="@string/b6"
        android:id="@+id/button6"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/button4"
        android:layout_alignStart="@id/button4"
        android:text="@string/b7"
        android:id="@+id/button7"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/button5"
        android:layout_toEndOf="@id/button7"
        android:text="@string/b8"
        android:id="@+id/button8"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/button6"
        android:layout_toEndOf="@id/button8"
        android:text=""
        android:id="@+id/button9"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bravo"
        android:textSize="50sp"


        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />


</RelativeLayout>
